# rs_transfer_worker

./: .env.dist  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.probe  Makefile  README.md  build.rs  docker-compose.yml
.github/: dependabot.yml
benches/: Dockerfile  transfer_worker_benchmark.rs
examples/: ftp_download.json  ftp_upload.json  gcs_download.json  gcs_upload.json  http_download.json  local_copy.json  s3_download.json  s3_upload.json  sftp_download.json  sftp_upload.json
rs_transfer/: Cargo.toml
rs_transfer/src/: error.rs  lib.rs  secret.rs
rs_transfer/src/endpoint/: http.rs  s3.rs  sftp.rs
rs_transfer/src/reader/: cursor_reader.rs  file_reader.rs  ftp_reader.rs  gcs_reader.rs  http_reader.rs  mod.rs  s3_reader.rs  sftp_reader.rs
rs_transfer/src/writer/: file_writer.rs  ftp_writer.rs  gcs_writer.rs  mod.rs  s3_writer.rs  sftp_writer.rs
share/: docker-compose.yml
src/: lib.rs  main.rs  message.rs  probe.rs  reader.rs  secret.rs  target_configuration.rs  transfer_job.rs  writer.rs
src/endpoint/: ftp.rs  http.rs  mod.rs  s3.rs  sftp.rs
src/reader/: file_reader.rs  ftp_reader.rs  http_reader.rs  mod.rs  s3_reader.rs  sftp_reader.rs
src/writer/: file_stream_writer.rs  file_writer.rs  ftp_stream_writer.rs  ftp_writer.rs  mod.rs  s3_stream_writer.rs  s3_writer.rs  sftp_writer.rs
tests/fprobe/: result.json
tests/ftp/: TEST_FILE.txt
tests/http/: index.html
tests/probe/: empty_path.json  result.json
tests/sftp/: Dockerfile
tests/sftp/.ssh/: ssh_host_ed25519_key.pub  ssh_host_rsa_key.pub
tests/sftp/ssh_keys/: ssh_host_ed25519_key  ssh_host_rsa_key
