[package]
name = "rs_transfer_worker"
version = "0.6.0-rc0"
authors =[
  "Valentin Noel <valentin.noel@luminvent.com>",
  "Marc-Antoine Arnaud <maarnaud@luminvent.com>",
  "Thibaud Le Graverend <thibaud.legraverend@luminvent.com>",
]
edition = "2018"
license = "MIT"

[features]
media_probe_and_upload = [
    "stainless_ffmpeg",
    "infer"
]

[dependencies]
async-std = { version = "1.10", features = ["attributes", "tokio1"] }
criterion = "0.3.5"
infer = { version = "0.7.0", optional = true }
log = "0.4.14"
mcai_worker_sdk = "2.0.0-rc0"
rs_transfer = "1.0.0"
schemars = "0.8.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
stainless_ffmpeg = { git = "https://github.com/nomalab/stainless-ffmpeg.git", branch = "master", optional = true}
tokio = "1.7"
tokio-io = "0.1"

[build-dependencies]
mcai_build = "0.1.2"

[[bench]]
name = "transfer_worker_benchmark"
harness = false
