[package]
name = "rs_transfer_worker"
version = "0.6.0"
authors =[
  "Valentin Noel <valentin.noel@media-io.com>",
  "Marc-Antoine Arnaud <maarnaud@media-io.com>",
  "Thibaud Le Graverend <thibaud.legraverend@media-io.com>",
]
edition = "2018"

[features]
media_probe_and_upload = [
    "stainless_ffmpeg",
    "infer"
]

[dependencies]
async-std = { version = "1.10", features = ["attributes", "tokio1"] }
criterion = "0.3.5"
infer = { version = "0.7.0", optional = true }
log = "0.4.14"
mcai_worker_sdk = "1.1.1"
rs_transfer = "4.2"
schemars = "0.8.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
stainless_ffmpeg = { version = "0.2.7", optional = true}
tokio = "1.7"
tokio-io = "0.1"

[build-dependencies]
built = "0.4"

[[bench]]
name = "transfer_worker_benchmark"
harness = false
