[package]
name = "rs_transfer_worker"
version = "0.8.0"
authors =[
  "Valentin Noel <valentin.noel@luminvent.com>",
  "Marc-Antoine Arnaud <maarnaud@luminvent.com>",
  "Thibaud Le Graverend <thibaud.legraverend@luminvent.com>",
]
description = "Move any file from a location to an another. Supported providers: local, HTTP, FTP, SFTP, S3, GCS."
edition = "2018"
license = "MIT"

[features]
media_probe_and_upload = [
    "stainless_ffmpeg",
    "infer"
]

[dependencies]
async-std = { version = "1.10", features = ["attributes", "tokio1"] }
criterion = "0.3.5"
infer = { version = "0.7.0", optional = true }
log = "0.4.14"
rs_transfer = "5.0.0"
schemars = "0.8.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
stainless_ffmpeg = { version = "0.2.7", optional = true}
tokio = "1.7"
tokio-io = "0.1"

[dependencies.mcai_worker_sdk]
version = "^2.0.0"

[build-dependencies]
mcai_build = "0.2.0"

[[bench]]
name = "transfer_worker_benchmark"
harness = false
