[package]
name = "rs_transfer"
version = "1.0.0"
authors = [
  "Valentin Noel <valentin.noel@media-io.com>",
  "Marc-Antoine Arnaud <maarnaud@media-io.com>",
]
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies]
async-std = { version = "1.5.0", features = ["unstable"]}
async-trait = "0.1.31"
bytes = "0.5.4"
ftp = { version = "3.0.1", features = ["secure"], path = "rust-ftp" }
futures = "0.3"
futures-util = "0.3"
log = "0.4"
reqwest = "0.10"
rusoto_core = "0.46"
rusoto_credential = "0.46"
rusoto_s3 = "0.46"
schemars = "0.8.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
ssh-transfer = "0.2"
threadpool = "1.8"
tokio = "1.7"
tokio-io = "0.1"
url = "2.1.1"

[dev-dependencies]
mockito = "0.30"
rusoto_mock = "0.45"
criterion = "0.3"

